--- a/Cibertec.Angular/wwwroot/app/public/login/index.html
+++ b/Cibertec.Angular/wwwroot/app/public/login/index.html
@@ -8,8 +8,7 @@
         <div class="form-group">
             <label for="userName" class="control-label col-sm-2">Usuario:</label>
             <div class="col-sm-4">
-                <input id="userName" type="text" class="form-control"
-                       ng-model="vm.user.userName" /><br />
+                <input id="email" type="text" class="form-control" ng-model="vm.user.email" /><br />
             </div>
         </div>
         <div class="form-group">
