--- a/Cibertec.Angular/wwwroot/app/private/product/index.html
+++ b/Cibertec.Angular/wwwroot/app/private/product/index.html
@@ -1,5 +1,5 @@
 ﻿<div ng-controller="productController as vm">
-    <div ng-show="vm.showCreate" class="alert alert-success alertdismissable">
+    <div ng-show="vm.showCreate" class="alert alert-success alert-dismissable">
         <a href="" class="close" data-dismiss="alert" arialabel="close">&times;</a>
         <strong>OK</strong> The product was created properly.
     </div>
@@ -9,7 +9,7 @@
             Product
         </button>
     </div>
-    <ul uib-pagination total-items="vm.totalRecords" items-per-page="vm.itemsPerPage"   ng-model="vm.currentPage"  max-size="vm.maxSize" ng-change="vm.pageChanged()"></ul>
+    <ul uib-pagination total-items="vm.totalRecords" items-per-page="vm.itemsPerPage"  ng-model="vm.currentPage"  max-size="vm.maxSize" ng-change="vm.pageChanged()"></ul>
     <div class="row">
         <product-card ng-repeat-start="product in vm.productList"
                       id="{{product.id}}"
@@ -18,12 +18,11 @@
                       unit-price="{{product.unitPrice}}"
                       package="{{product.package}}"
                       is-discontinued="product.isDiscontinued">
-            <button ng-click="vm.getProduct(product.id); vm.edit();"
-                    data-toggle="modal" data-target="#modal-container" class="btn btn-success btn-sm">
+
+            <button ng-click="vm.getProduct(product.id); vm.edit();" data-toggle="modal" data-target="#modal-container" class="btn btn-success btn-sm">
                 <span class="glyphicon glyphicon-edit"></span> Edit
             </button>
-            <button ng-click="vm.getProduct(product.id); vm.delete();"
-                    data-toggle="modal" data-target="#modal-container" class="btn btn-danger btn-sm">
+            <button ng-click="vm.getProduct(product.id); vm.delete();" data-toggle="modal" data-target="#modal-container" class="btn btn-danger btn-sm">
                 <span class="glyphicon glyphicon-erase"></span> Delete
             </button>
         </product-card>
