--- a/Cibertec.Angular/wwwroot/app/private/customer/directives/customer-card/customer-card.html
+++ b/Cibertec.Angular/wwwroot/app/private/customer/directives/customer-card/customer-card.html
@@ -1,9 +1,9 @@
 ﻿<div class="customer-card col-sm-3">
-    <div><label>Product Name: </label> {{productName}}</div>
-    <div><label>Supplier Id: </label> {{supplierId}}</div>
-    <div><label>Unit Price: </label> {{unitPrice}}</div>
-    <div><label>Package: </label> {{package}}</div>
-    <div><label>Is Discontinued?: </label> {{isDiscontinued}}</div>
+    <div><label>First Name: </label> {{firstName}}</div>
+    <div><label>Last Name: </label> {{lastName}}</div>
+    <div><label>City: </label> {{city}}</div>
+    <div><label>Country: </label> {{country}}</div>
+    <div><label>Phone: </label> {{phone}}</div>
     <div class="buttons-controls">
         <ng-transclude></ng-transclude>
     </div>
