Se creo los formularios para las tablas customer, product , order, order Item y Suppliers con Angular

--- a/Cibertec.Angular/wwwroot/app/private/product/directives/product-form/product-form.html
+++ b/Cibertec.Angular/wwwroot/app/private/product/directives/product-form/product-form.html
@@ -3,7 +3,7 @@
     <div class="form-group">
         <label class="col-sm-4 control-label">Product Name: </label>
         <div class="col-sm-6">
-            <input id="companyName" class="form-control" type="text"
+            <input id="productName" class="form-control" type="text"
                    ng-model="product.productName" value="{{product.productName}}" />
         </div>
     </div>
